# yab

./: .dockerignore  .env.example  .gitignore  README.md  ansible.cfg  conftest.py  gunicorn.conf.py  manage.py  package-lock.json  package.json  pyproject.toml  setup.cfg  tsconfig.json  webpack.config.ts
blog/: asgi.py  bg_tasks.py  urls.py  wsgi.py
blog-fe/ts/: editor.ts
blog/config/: __init__.py
blog/config/settings/: base.py
blog/posts/: models.py  serializers.py  urls.py  utils.py
blog/posts/migrations/: 0001_initial.py  0002_posttranslationimage.py  0006_alter_posttranslation_raw_text.py
blog/posts/tests/: factories.py  fixtures.py  (+2 more)
blog/settings/: base.py  local.py  prod.py
blog/users/: admin.py  apps.py  auth_backends.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
deploy/: hosts.yml
deploy/group_vars/: local.yml  prod.yml
deploy/playbooks/: build.yml  deploy.yml  setup.yml
deploy/templates/: env.j2  nginx.j2
deploy/vars/: main.yml
docker/: Dockerfile  docker-compose.yml  prod.Dockerfile  prod.docker-compose.yml
prego/: bg_tasks.py  urls.py
prego-fe/js/: bootstrap.js
prego-fe/ts/: codehighlight.ts  editor.ts  utils.ts
prego/config/: __init__.py  asgi.py  wsgi.py
prego/posts/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  utils.py  views.py
prego/users/: apps.py  auth_backends.py  tasks.py
templates/: base.html
templates/posts/: create.html  posttranslation_detail.html  posttranslation_form.html  posttranslation_list.html
templates/users/: email_verification_token.html
(+31 files in other folders)
